{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 51,
  "lineage": "d4ec0322-089a-eb5b-518b-b59c705eee5e",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127214171089:internet-gateway/igw-03045aba39afa42ba",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0d227d6b9208431f8"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0d227d6b9208431f8"
                ]
              }
            ],
            "id": "igw-03045aba39afa42ba",
            "internet_gateway_id": "igw-03045aba39afa42ba",
            "owner_id": "127214171089"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127214171089:vpc/vpc-0d227d6b9208431f8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08523bb0b4d402895",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-07871cf1c053d5715",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d227d6b9208431f8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01fac31d974fce64c",
            "owner_id": "127214171089"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cas_app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08240ba0f7eca7bd6",
            "arn": "arn:aws:ec2:us-east-1:127214171089:elastic-ip/eipalloc-08240ba0f7eca7bd6",
            "association_id": "eipassoc-0c49718ae62cec5e2",
            "domain": "vpc",
            "id": "eipalloc-08240ba0f7eca7bd6",
            "instance": "i-03250331029027543",
            "network_border_group": "us-east-1",
            "network_interface": "eni-072f200dc59b33936",
            "private_dns": "ip-172-31-201-169.ec2.internal",
            "private_ip": "172.31.201.169",
            "public_dns": "ec2-98-88-104-151.compute-1.amazonaws.com",
            "public_ip": "98.88.104.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cas-lookup-app-eip"
            },
            "tags_all": {
              "Name": "cas-lookup-app-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.cas_app_profile",
            "aws_iam_role.cas_app_role",
            "aws_instance.cas_app",
            "aws_key_pair.cas_app_key",
            "aws_security_group.cas_app_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cas_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:127214171089:instance/i-03250331029027543",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cas-lookup-app-profile",
            "id": "i-03250331029027543",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cas-lookup-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072f200dc59b33936",
            "private_dns": "ip-172-31-201-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.201.169",
            "public_dns": "ec2-98-88-104-151.compute-1.amazonaws.com",
            "public_ip": "98.88.104.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c1d8d9ea6d361af0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "cas-lookup-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0194df32f60d6813a",
            "tags": {
              "Name": "cas-lookup-app"
            },
            "tags_all": {
              "Name": "cas-lookup-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05adbb714df5723fa"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.cas_app_profile",
            "aws_iam_role.cas_app_role",
            "aws_key_pair.cas_app_key",
            "aws_security_group.cas_app_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127214171089:route-table/rtb-08e4776eb81192f02",
            "id": "rtb-08e4776eb81192f02",
            "owner_id": "127214171089",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03045aba39afa42ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cas-lookup-app-public-rt"
            },
            "tags_all": {
              "Name": "cas-lookup-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d227d6b9208431f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_internet_gateway.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084d93fabe5b7adf2",
            "route_table_id": "rtb-08e4776eb81192f02",
            "subnet_id": "subnet-0194df32f60d6813a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "data.aws_internet_gateway.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cas_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:127214171089:security-group/sg-05adbb714df5723fa",
            "description": "Security group for CAS Lookup application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05adbb714df5723fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask App",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cas-lookup-app-sg",
            "name_prefix": "",
            "owner_id": "127214171089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cas-lookup-app-sg"
            },
            "tags_all": {
              "Name": "cas-lookup-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d227d6b9208431f8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}